<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/olympic"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="250dp">

        <EditText
            android:id="@+id/editTextKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/EditText_1"
            android:textColorHint="@color/black"
            android:textSize="25sp"
            android:autofillHints="password" />

        <Button
            android:id="@+id/desEncryptFileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Button_5"
            android:textColor="@color/olympic"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/desDecryptFileBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Button_6"
            android:textColor="@color/olympic"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/buttonGenerateKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Button_7"
            android:textColor="@color/olympic"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>